Complete Ball Engine on a Line